# precision-mlps

./: .gitignore  CLAUDE.md  README.md  future_experiments.md  implementation.md  pyproject.toml  thoughts.md
experiments/: __init__.py
experiments/exp00_sanity/: config.yaml  run.py
experiments/exp01_lambda_tradeoff/: config.yaml  plot_consolidated.py  run.py
experiments/exp02_basin_stability/: config.yaml  run.py
experiments/exp03_geometry_ladder/: config.yaml  run.py
experiments/exp04_hessian/: config.yaml  run.py
experiments/exp05_phi_conditioning/: config.yaml  run.py
experiments/exp06_objective_mismatch/: config.yaml  run.py
experiments/exp07_noise_sensitivity/: config.yaml  run.py
experiments/exp08_reparameterization/: config.yaml  run.py
experiments/exp09_varpro/: config.yaml  run.py
experiments/exp0A_QI_vs_learn/: config.yaml  run.py
papers/: Section_3_Rewrite.tex  main_paper.tex  practical_implementation.tex  section3_rewrite.tex
results/: results.md
results/exp01_lambda_tradeoff/: data.json  data_mpmath.json
results/exp0A_QI_vs_learn/: data.json
scripts/: sweep_machine_eps.py  sweep_qi_convergence.py
src/: __init__.py
src/config/: __init__.py  loader.py  schema.py
src/construction/: README.md  __init__.py  initialize.py  qi_mpmath.py  readout.py
src/data/: __init__.py  dataset.py  sampling.py  targets.py
src/models/: __init__.py  freeze.py  layers.py  mlp.py
src/training/: __init__.py  losses.py  metrics.py  optimizers.py  (+1 more)
tests/: test_analysis.py  test_construction.py  test_freeze.py  test_models.py  test_training.py
